@@ -1,0 +1,8 @@
+Description
+
+This test validates that resources with data: URIs aren't present in the Resource Timing buffer.
+
+
+
+PASS entries.length == 0 
+
